2024-02-19T16:20:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7962518967 # 131
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-19
* notice: last 14d: unq all: 3 4136
* notice: prev accum: outdated-unq outdated-all / unq all: 1939 189131 / 1960 193434
* notice: next accum: outdated-unq outdated-all / unq all: 1939 189131 / 1960 193526
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -92 / +1 +203 -0 -0 / 1 203
* notice: removed / changed dates: [] / [2024-02-05 2024-02-19]

2024-02-19T08:19:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7956505976 # 130
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-19
* notice: last 14d: unq all: 3 4136
* notice: prev accum: outdated-unq outdated-all / unq all: 1939 189131 / 1959 193323
* notice: next accum: outdated-unq outdated-all / unq all: 1939 189131 / 1960 193434
* notice: prev exec diff / last date diff / accum: unq all: +1 +111 -0 -92 / +1 +111 -0 -0 / 1 111
* notice: removed / changed dates: [] / [2024-02-05 2024-02-19]

2024-02-19T01:05:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7953107911 # 129
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-19
* notice: last 14d: unq all: 3 4117
* notice: prev accum: outdated-unq outdated-all / unq all: 1937 188830 / 1959 193228
* notice: next accum: outdated-unq outdated-all / unq all: 1939 189131 / 1959 193323
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -75 / +1 +299 -0 -0 / 1 299
* notice: removed / changed dates: [2024-02-04] / [2024-02-05 2024-02-18]

2024-02-18T16:17:52Z: