@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-07T01:02:47Z",
-  "count" : 300,
+  "timestamp" : "2024-02-20T01:03:24Z",
+  "count" : 225,
   "count_minmax" : [ 112, 300 ],
-  "count_decinc" : [ -0, +300 ],
+  "count_decinc" : [ -75, +300 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
