@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-02-19T16:20:07Z",
-  "count_outdated" : 189131,
-  "uniques_outdated" : 1939,
-  "count" : 193526,
+  "timestamp" : "2024-02-20T01:03:24Z",
+  "count_outdated" : 189431,
+  "uniques_outdated" : 1941,
+  "count" : 193621,
   "uniques" : 1960,
   "clones" : [
     {
-      "timestamp": "2024-02-05T00:00:00Z",
-      "count": 41,
-      "count_minmax": [ 41, 300 ],
-      "count_decinc": [ 259, 300 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
       "timestamp": "2024-02-06T00:00:00Z",
-      "count": 300,
+      "count": 225,
       "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 0, 300 ],
+      "count_decinc": [ 75, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-19T00:00:00Z",
-      "count": 203,
-      "count_minmax": [ 111, 203 ],
-      "count_decinc": [ 0, 203 ],
+      "count": 298,
+      "count_minmax": [ 111, 298 ],
+      "count_decinc": [ 0, 298 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
