@@ -1,15 +1,10 @@
 {
-  "count": 4136,
+  "count": 4115,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-02-05T00:00:00Z",
-      "count": 41,
-      "uniques": 2
-    },
-    {
       "timestamp": "2024-02-06T00:00:00Z",
-      "count": 300,
+      "count": 225,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2024-02-19T00:00:00Z",
-      "count": 203,
+      "count": 298,
       "uniques": 1
     }
   ]
